update[hwameistor-ui]: update hwameistor-ui swagger files
