# docs/swagger.json
@@ -242,6 +242,20 @@
                         "description": "name",
                         "name": "Name",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "Page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "pageSize",
+                        "name": "PageSize",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -305,6 +319,20 @@
                         "name": "NodeName",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "Page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "pageSize",
+                        "name": "PageSize",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -337,13 +365,27 @@
                         "name": "NodeName",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "Page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "pageSize",
+                        "name": "PageSize",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.VolumeOperationList"
+                            "$ref": "#/definitions/api.VolumeOperationListByNode"
                         }
                     }
                 }
@@ -368,6 +410,20 @@
                         "description": "name",
                         "name": "Name",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "Page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "pageSize",
+                        "name": "PageSize",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -432,6 +488,20 @@
                         "name": "StoragePoolName",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "Page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "pageSize",
+                        "name": "PageSize",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -471,6 +541,20 @@
                         "name": "StoragePoolName",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "Page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "pageSize",
+                        "name": "PageSize",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -478,37 +562,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.NodeDiskListByPool"
-                        }
-                    }
-                }
-            }
-        },
-        "/volumes/volumeoperations": {
-            "get": {
-                "description": "list VolumeOperations",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Volume"
-                ],
-                "summary": "摘要 获取数据卷操作记录列表信息",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "name",
-                        "name": "Name",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "成功",
-                        "schema": {
-                            "$ref": "#/definitions/api.VolumeOperationList"
                         }
                     }
                 }
@@ -540,7 +593,7 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/api.VolumeOperation"
+                            "$ref": "#/definitions/api.VolumeOperationByVolume"
                         }
                     }
                 }
@@ -661,6 +714,20 @@
                         "description": "name",
                         "name": "Name",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "Page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "pageSize",
+                        "name": "PageSize",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -840,12 +907,8 @@
                     "type": "string"
                 },
                 "page": {
-                    "description": "page",
-                    "type": "integer"
-                },
-                "pageSize": {
-                    "description": "pageSize",
-                    "type": "integer"
+                    "description": "page 信息",
+                    "$ref": "#/definitions/api.Pagination"
                 }
             }
         },
@@ -993,7 +1056,7 @@
                     "description": "HAState is state for ha replica, replica.Status.State == Ready only when HAState is Consistent of nil",
                     "$ref": "#/definitions/api.HAState"
                 },
-                "inuse": {
+                "inUse": {
                     "description": "InUse is one of volume replica's states, which indicates the replica is used by a Pod or not",
                     "type": "boolean"
                 },
@@ -1038,20 +1101,20 @@
         "api.NodeDiskListByPool": {
             "type": "object",
             "properties": {
-                "localDiskListByNodes": {
-                    "description": "LocalDiskListByNodes",
+                "localDisks": {
+                    "description": "localDisks 节点磁盘列表",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/api.LocalDiskListByNode"
+                        "$ref": "#/definitions/api.LocalDisk"
                     }
                 },
-                "page": {
-                    "description": "page",
-                    "type": "integer"
+                "nodeName": {
+                    "description": "nodeName 节点名称",
+                    "type": "string"
                 },
-                "pageSize": {
-                    "description": "pageSize",
-                    "type": "integer"
+                "page": {
+                    "description": "page 信息",
+                    "$ref": "#/definitions/api.Pagination"
                 },
                 "storagePoolName": {
                     "description": "StoragePoolName 存储池名称",
@@ -1132,6 +1195,35 @@
                 }
             }
         },
+        "api.Pagination": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "description": "当前页索引，从 1 开始，为 0 时，会自动重置为默认值 constants.DefaultPage",
+                    "type": "integer"
+                },
+                "page_size": {
+                    "description": "每页数据量，为 -1 时表示查询全部，为 0 时会重置为默认值\nconstants.DefaultPageSize",
+                    "type": "integer"
+                },
+                "pages": {
+                    "description": "总页数",
+                    "type": "integer"
+                },
+                "search": {
+                    "description": "搜索关键字，支持模糊搜索,精准匹配和高级搜索.",
+                    "type": "string"
+                },
+                "sort": {
+                    "description": "排序规则，支持字符串和数字类型的字段进行排序",
+                    "type": "string"
+                },
+                "total": {
+                    "description": "总共有多少条目，请求时可以不用传递",
+                    "type": "integer"
+                }
+            }
+        },
         "api.StorageNode": {
             "type": "object",
             "properties": {
@@ -1189,12 +1281,8 @@
             "type": "object",
             "properties": {
                 "page": {
-                    "description": "page",
-                    "type": "integer"
-                },
-                "pageSize": {
-                    "description": "pageSize",
-                    "type": "integer"
+                    "description": "page 信息",
+                    "$ref": "#/definitions/api.Pagination"
                 },
                 "storageNodes": {
                     "description": "StorageNodes",
@@ -1208,6 +1296,10 @@
         "api.StorageNodeListByPool": {
             "type": "object",
             "properties": {
+                "page": {
+                    "description": "page 信息",
+                    "$ref": "#/definitions/api.Pagination"
+                },
                 "storageNodes": {
                     "description": "StorageNodes",
                     "type": "array",
@@ -1258,12 +1350,8 @@
             "type": "object",
             "properties": {
                 "page": {
-                    "description": "page",
-                    "type": "integer"
-                },
-                "pageSize": {
-                    "description": "pageSize",
-                    "type": "integer"
+                    "description": "page 信息",
+                    "$ref": "#/definitions/api.Pagination"
                 },
                 "storagePools": {
                     "description": "storagePools",
@@ -1337,7 +1425,7 @@
                     "description": "local volume state 状态",
                     "type": "string"
                 },
-                "volumegroup": {
+                "volumeGroup": {
                     "description": "VolumeGroup is the group name of the local volumes. It is designed for the scheduling and allocating. 磁盘组",
                     "type": "string"
                 }
@@ -1347,12 +1435,8 @@
             "type": "object",
             "properties": {
                 "page": {
-                    "description": "page",
-                    "type": "integer"
-                },
-                "pageSize": {
-                    "description": "pageSize",
-                    "type": "integer"
+                    "description": "page 信息",
+                    "$ref": "#/definitions/api.Pagination"
                 },
                 "volumes": {
                     "description": "volumes",
@@ -1366,10 +1450,6 @@
         "api.VolumeMigrateOperation": {
             "type": "object",
             "properties": {
-                "VolumeName": {
-                    "description": "VolumeName 迁移卷名称",
-                    "type": "string"
-                },
                 "endTime": {
                     "description": "EndTime 迁移结束时间",
                     "type": "string"
@@ -1393,46 +1473,46 @@
                 "targetNode": {
                     "description": "TargetNode 迁移目的节点",
                     "type": "string"
+                },
+                "volumeName": {
+                    "description": "VolumeName 迁移卷名称",
+                    "type": "string"
                 }
             }
         },
-        "api.VolumeOperation": {
+        "api.VolumeOperationByVolume": {
             "type": "object",
             "properties": {
-                "VolumeMigrateOperations": {
+                "volumeMigrateOperations": {
                     "description": "VolumeMigrateOperations",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/api.VolumeMigrateOperation"
                     }
                 },
-                "page": {
-                    "description": "page",
-                    "type": "integer"
-                },
-                "pageSize": {
-                    "description": "pageSize",
-                    "type": "integer"
-                },
                 "volumeName": {
-                    "description": "volume name",
+                    "description": "VolumeName",
                     "type": "string"
                 }
             }
         },
-        "api.VolumeOperationList": {
+        "api.VolumeOperationListByNode": {
             "type": "object",
             "properties": {
-                "VolumeOperations": {
-                    "description": "VolumeOperations",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/api.VolumeOperation"
-                    }
-                },
                 "nodeName": {
                     "description": "node name",
                     "type": "string"
+                },
+                "page": {
+                    "description": "page 信息",
+                    "$ref": "#/definitions/api.Pagination"
+                },
+                "volumeMigrateOperations": {
+                    "description": "VolumeOperations",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.VolumeMigrateOperation"
+                    }
                 }
             }
         },
